--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/ahmad-666/AutoDoor.git"
   },
-  "homepage": "https://ahmad-666.github.io/AutoDoor",
+  "homepage": "",
   "keywords": [
     "auto",
     "doors",
