--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "/src/index/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open 'chrome' --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "deploy": "gh-pages -d dist"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ahmad-666/AutoDoor.git"
   },
-  "homepage": "",
   "keywords": [
     "auto",
     "doors",
@@ -53,7 +51,6 @@
     "animejs": "^3.1.0",
     "core-js": "^3.6.4",
     "fontfaceobserver": "^2.1.0",
-    "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
     "nouislider": "^14.1.1",
     "path-browserify": "^1.0.0",
